--- a/phytestpage.html
+++ b/phytestpage.html
@@ -25,18 +25,6 @@
             margin: auto;
         }
 
-        .timer {
-            font-size: 24px;
-            font-weight: bold;
-            color: #ff4757;
-            animation: pulse 1s infinite alternate;
-        }
-
-        @keyframes pulse {
-            from { transform: scale(1); }
-            to { transform: scale(1.1); }
-        }
-
         .question img {
             width: 100%;
             max-width: 400px;
@@ -44,27 +32,11 @@
             margin: 10px 0;
         }
 
-        button {
-            padding: 12px 20px;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
-            transition: 0.3s;
-            cursor: not-allowed;
-            background: gray;
-            color: white;
+        .message {
+            font-size: 20px;
             font-weight: bold;
-            width: 100%;
-        }
-
-        button.enabled {
-            background: #27ae60;
-            cursor: pointer;
-            box-shadow: 0px 4px 10px rgba(0, 255, 0, 0.5);
-        }
-
-        button.enabled:hover {
-            background: #2ecc71;
+            color: #ffdd57;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -72,9 +44,8 @@
 
     <div class="container">
         <h2> IGNITTE PHYSICS TEST </h2>
-        <p class="timer">Time left: <span id="time">1:00</span></p>
 
-        <!-- 7 MCQ Questions -->
+        <!-- Questions (MCQs & Integer Type) -->
         <div class="question">
             <p><b>1️⃣ Question:</b></p>
             <img src="mc1.png" alt="MCQ 1">
@@ -85,6 +56,7 @@
             <input type="radio" name="mc1" value="D"> D
         </div>
 
+        <!-- Repeat for mc2 to mc7 -->
         <div class="question">
             <p><b>2️⃣ Question:</b></p>
             <img src="mc2.png" alt="MCQ 2">
@@ -95,7 +67,6 @@
             <input type="radio" name="mc2" value="D"> D
         </div>
 
-        <!-- Repeat for mc3 to mc7 -->
         <div class="question">
             <p><b>3️⃣ Question:</b></p>
             <img src="mc3.png" alt="MCQ 3">
@@ -146,7 +117,7 @@
             <input type="radio" name="mc7" value="D"> D
         </div>
 
-        <!-- 3 Integer Type Questions -->
+        <!-- Integer Type Questions -->
         <div class="question">
             <p><b>8️⃣ Integer Type:</b></p>
             <img src="in1.png" alt="Integer 1">
@@ -168,28 +139,38 @@
             <input type="number" name="in3" placeholder="Enter your answer">
         </div>
 
+        <p class="message" id="redirectMessage">Waiting for the right time...</p>
+
+    </div>
+
     <script>
-        let timeLeft = 60; // 1 minute
-        let timerElement = document.getElementById("time");
+        function checkTime() {
+            let now = new Date();
+            let hours = now.getHours();
+            let minutes = now.getMinutes();
 
-        function updateTimer() {
-            let minutes = Math.floor(timeLeft / 60);
-            let seconds = timeLeft % 60;
-            timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+            let startHour = 17; // 5:35 PM
+            let startMin = 35;
+            let endHour = 17; // 5:50 PM
+            let endMin = 50;
 
-            if (timeLeft === 0) {
-                clearInterval(timer);
-                autoSubmit();
+            let message = document.getElementById("redirectMessage");
+
+            if (
+                (hours === startHour && minutes >= startMin) ||
+                (hours === endHour && minutes <= endMin) ||
+                (hours > startHour && hours < endHour)
+            ) {
+                message.innerHTML = "Redirecting to results...";
+                setTimeout(() => {
+                    window.location.href = "resultloader.html";
+                }, 2000);
             } else {
-                timeLeft--;
+                message.innerHTML = "Test is available only between 5:35 PM and 5:50 PM.";
             }
         }
 
-        function autoSubmit() {
-            window.location.href = "resultloader.html"; // Redirect to prank page
-        }
-
-        let timer = setInterval(updateTimer, 1000);
+        setInterval(checkTime, 1000); // Check every second
     </script>
 
 </body>
