--- a/phytestpage.html
+++ b/phytestpage.html
@@ -143,35 +143,30 @@
 
     </div>
 
-    <script>
+       <script>
         function checkTime() {
             let now = new Date();
             let hours = now.getHours();
             let minutes = now.getMinutes();
 
-            let startHour = 17; // 5:35 PM
-            let startMin = 35;
-            let endHour = 17; // 5:50 PM
-            let endMin = 50;
+            if (hours < 17 || (hours === 17 && minutes < 35)) {
+                document.getElementById("testMessage").textContent = "Test will start at 5:35 PM.";
+                return;
+            } 
 
-            let message = document.getElementById("redirectMessage");
-
-            if (
-                (hours === startHour && minutes >= startMin) ||
-                (hours === endHour && minutes <= endMin) ||
-                (hours > startHour && hours < endHour)
-            ) {
-                message.innerHTML = "Redirecting to results...";
-                setTimeout(() => {
-                    window.location.href = "resultloader.html";
-                }, 2000);
-            } else {
-                message.innerHTML = "Test is available only between 5:35 PM and 5:50 PM.";
+            if (hours === 17 && minutes >= 50) {
+                document.getElementById("testMessage").textContent = "Test has ended.";
+                return;
             }
+
+            document.getElementById("testMessage").classList.add("hidden");
+            document.getElementById("testContent").classList.remove("hidden");
+
+            let timeRemaining = (50 - minutes) * 60 * 1000;
+            setTimeout(() => window.location.href = "resultloader.html", timeRemaining);
         }
 
-        setInterval(checkTime, 1000); // Check every second
+        checkTime();
     </script>
-
 </body>
 </html>
